# mmpose

./: pyproject.toml  test.py  test_img.py  サンプル.md
configs/_base_/datasets/: horse_original.py  test_horse_original.py
configs/animal/2d_kpt_sview_rgb_img/topdown_heatmap/horse_original/: horse_original.py
configs/animal/2d_kpt_sview_rgb_img/topdown_heatmap/test_horse_original/: test_horse_original.py
mmpose/datasets/: __init__.py
mmpose/datasets/datasets/: __init__.py
mmpose/datasets/datasets/animal/: __init__.py  horse_original.py
